--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="uft-8">
+        <meta charset="utf-8">
         <title>My First Bitstarter</title>
         <link type="text/css" rel="stylesheet"
             href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
@@ -14,14 +14,14 @@
                 width: 960px;
             }
             p.lead {
-                padding-top:15px;
+                padding-top: 15px;
             }
-            .nativation, .pitch, .section1, .section2, .faq, .footer {
+            .natigation, .pitch, .section1, .section2, .faq, .footer {
                 padding: 10px 0px 10px 0px;
             }
             .video, .thermometer, .order, .social {
                 border: 1px dotted;
-                text-align center;
+                text-align: center;
             }
             .video {
                 /* Internal borders have 1px width, thus need to add 4 x 1px to 120px. */
@@ -56,6 +56,11 @@
                     <h1>Bitstarter Title</h1>
                 </div>
             </div>
+            <div class="row subheading">
+                <div class="span12">
+                    <p class="lead">This is my first bitstarter project.</p>
+                </div>
+            </div>
             <div class="row pitch">
                 <div class="span6 video">
                     Video
@@ -80,6 +85,11 @@
             <div class="row section2">
                 <div class="span12">
                    Marketing Section 2 
+                </div>
+            </div>
+            <div class="row faq">
+                <div class="span12">
+                    FAQ
                 </div>
             </div>
             <div class="row footer">
